# winkle-kernel

./: Cargo.toml  INSTALL.md  LICENSE  README.md  disassemble  makebin
machines/: microchip-polarfire-icicle.env  polarfire-icicle-kit.env  qemu-microchip-polarfire-icicle.env  qemu-riscv64-virt.env  qemu-riscv64imac-virt.env  riscv64imac-unknown-winklekernel-elf.json  sifive-hifive-unleashed.env  sifive-hifive-unmatched.env
src/: atomic.rs  kernel.rs  macros.rs  register.rs  spinlock.rs
src/device/uart/: mod.rs  sifive.rs  uart16550.rs
