[package]
name = "winkle-kernel"
version = "0.1.0"
authors = ["Mike Dilger <mike@mikedilger.com>"]
edition = "2018"
description = "Winkle OS kernel"
readme = "README.md"
license-file = "LICENSE"

[[bin]]
name = "kernel"
path = "src/kernel.rs"

[profile.dev]
opt-level = 0
lto = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[dependencies]
bit_field = "0.10"
